// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> renders base component correctly 1`] = `
<a
  className="base dark"
  href="https://www.aesop.com/au/r/philosophy-to-products"
  target="_self"
>
  <picture
    className="picture dark base"
  >
    <source
      media="(min-width: 1025px)"
      srcSet="/images/products/Hand_Reverence_Aromatique_Hand_Wash_500mL_large.png 2x"
    />
    <source
      media="(min-width: 640px)"
      srcSet="/images/products/Hand_Reverence_Aromatique_Hand_Wash_500mL_medium.png 2x"
    />
    <source
      media="(min-width: 0px)"
      srcSet="/images/products/Hand_Reverence_Aromatique_Hand_Wash_500mL_small.png 2x"
    />
    <img
      alt="Image of Milk Cleansing Campaign Aesop 2019"
    />
  </picture>
</a>
`;

exports[`<Image /> renders the picture tag without a Hyperlink if the \`cta\` prop was not passed 1`] = `
<picture
  className="picture dark base"
>
  <source
    media="(min-width: 1025px)"
    srcSet="/images/products/Hand_Reverence_Aromatique_Hand_Wash_500mL_large.png 2x"
  />
  <source
    media="(min-width: 640px)"
    srcSet="/images/products/Hand_Reverence_Aromatique_Hand_Wash_500mL_medium.png 2x"
  />
  <source
    media="(min-width: 0px)"
    srcSet="/images/products/Hand_Reverence_Aromatique_Hand_Wash_500mL_small.png 2x"
  />
  <img
    alt="Image of Milk Cleansing Campaign Aesop 2019"
  />
</picture>
`;
